@@ -23,4 +23,5 @@ core
 /inc/probe/bigendian
 /inc/probe/complex
 /inc/probe/longdouble
+/inc/probe/abi
 /inc/probe/*.exe
