@@ -91,4 +91,5 @@ INCLUDE: ../../xs/Function.xs
 INCLUDE: ../../xs/Declare.xs
 INCLUDE: ../../xs/ClosureData.xs
 INCLUDE: ../../xs/API.xs
+INCLUDE: ../../xs/ABI.xs
 INCLUDE: ../../xs/Record.xs
