@@ -10,7 +10,7 @@ $ffi->lib(find_lib lib => 'test', symbol => 'f0', libpath => 'libtest');
 my $address = $ffi->find_symbol('f0');
 my $uint8   = FFI::Platypus::Type->new('uint8');
 
-my $function = eval { FFI::Platypus::Function->new($ffi, $address, $uint8, $uint8) };
+my $function = eval { FFI::Platypus::Function->new($ffi, $address, -1, $uint8, $uint8) };
 is $@, '', 'FFI::Platypus::Function->new';
 isa_ok $function, 'FFI::Platypus::Function';
 
