@@ -1,10 +1,11 @@
 MODULE = FFI::Platypus PACKAGE = FFI::Platypus::Function
 
 ffi_pl_function *
-new(class, platypus, address, return_type, ...)
+new(class, platypus, address, abi, return_type, ...)
     const char *class
     SV *platypus
     void *address
+    int abi
     ffi_pl_type *return_type
   PREINIT:
     ffi_pl_function *self;
@@ -15,12 +16,15 @@ new(class, platypus, address, return_type, ...)
     ffi_type **ffi_argument_types;
     ffi_status ffi_status;
     ffi_pl_type *tmp;
+    ffi_abi ffi_abi;
     int extra_arguments;
   CODE:
   
-    for(i=0,extra_arguments=0; i<(items-4); i++)
+    ffi_abi = abi == -1 ? FFI_DEFAULT_ABI : abi;
+    
+    for(i=0,extra_arguments=0; i<(items-5); i++)
     {
-      arg = ST(i+4);
+      arg = ST(i+5);
       if(!(sv_isobject(arg) && sv_derived_from(arg, "FFI::Platypus::Type")))
       {
         croak("non-type parameter passed in as type");
@@ -30,9 +34,9 @@ new(class, platypus, address, return_type, ...)
         extra_arguments += tmp->extra[0].custom_perl.argument_count;
     }
   
-    Newx(buffer, (sizeof(ffi_pl_function) + sizeof(ffi_pl_type*)*(items-4+extra_arguments)), char);
+    Newx(buffer, (sizeof(ffi_pl_function) + sizeof(ffi_pl_type*)*(items-5+extra_arguments)), char);
     self = (ffi_pl_function*)buffer;
-    Newx(ffi_argument_types, items-4+extra_arguments, ffi_type*);
+    Newx(ffi_argument_types, items-5+extra_arguments, ffi_type*);
     
     self->address = address;
     self->return_type = return_type;
@@ -48,9 +52,9 @@ new(class, platypus, address, return_type, ...)
       ffi_return_type = &ffi_type_pointer;
     }
     
-    for(i=0,n=0; i<(items-4); i++,n++)
+    for(i=0,n=0; i<(items-5); i++,n++)
     {
-      arg = ST(i+4);
+      arg = ST(i+5);
       self->argument_types[n] = INT2PTR(ffi_pl_type*, SvIV((SV*) SvRV(arg)));
       if(self->argument_types[n]->platypus_type == FFI_PL_NATIVE
       || self->argument_types[n]->platypus_type == FFI_PL_CUSTOM_PERL
@@ -75,8 +79,8 @@ new(class, platypus, address, return_type, ...)
     
     ffi_status = ffi_prep_cif(
       &self->ffi_cif,            /* ffi_cif     | */
-      FFI_DEFAULT_ABI,           /* ffi_abi     | */
-      items-4+extra_arguments,   /* int         | argument count */
+      ffi_abi,                   /* ffi_abi     | */
+      items-5+extra_arguments,   /* int         | argument count */
       ffi_return_type,           /* ffi_type *  | return type */
       ffi_argument_types         /* ffi_type ** | argument types */
     );
